  * build for gtk3 and update build-depends
  * move software-propoerties-gtk into suggests
  * strip strings properly in a markings file, thanks to
    Vassilis Palassopoulos (palasso) 
  * show source package name in the details (closes: #692528)
  * merged lp:~fitoschido/synaptic/es-redundancy:
    - Remove empty es_ES .po files. Spanish translations are already 
      provided in es files.

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 12 Jul 2012 21:22:15 +0200

synaptic (0.75.13) unstable; urgency=low

  * debian/synaptic.menu:
    - use x-terminal-emulator -e synaptic-pkexec to support systems
      that do not have a GUI policykit agent running (closes: #678847)
  * include all origins in the origin filter not just the first one
  * show all "archives" in the origins view even if they are "shadowed"
    by another one

 -- Michael Vogt <mvo@debian.org>  Thu, 12 Jul 2012 21:14:23 +0200

synaptic (0.75.12) unstable; urgency=low

  * updated Telugu translation, thanks to  Praveen Illa
  * Fix  "Enter on keypad cannot work with Find dialog" (closes: #673804),
    thanks to YunQiang Su
  * po/de.po:
    - fix incorrect translation of breaks (closes: #622752)
  * use synaptic-pkexec in debian as well and remove from the
    Ubuntu patch set (closes: #674071)
  * debian/patches/03_hide_browse_documentation.dpatch:
    - removed, not worth the delta
  * common/sections_trans.cc:
    - make "Tasks" translatable, thanks to Sergey Alyoshin
      (closes: #675862)
  * po/ru.po:
    - updated russian translation, thanks to Sergey Alyoshin
      (closes: #675859)

 -- Michael Vogt <mvo@debian.org>  Mon, 11 Jun 2012 17:49:09 +0200

synaptic (0.75.11) unstable; urgency=low

  [  Sergey Alyoshin ]
  * Fix some compiler warnings, closes: #672919
  * Fix missing Help/Contents localization, closes: #670961
  
  [ Michael Vogt ]
  * add "ctrl-l" accelerator key for downloading the changelog,
    closes: #388250
  * merge patch from Carsten Hey to support multiarch deborphan,