@@ -51,7 +51,9 @@ synaptic (0.80~exp1) UNRELEASED; urgency=low
   * show source package name in the details (closes: #692528)
   * merged lp:~fitoschido/synaptic/es-redundancy:
     - Remove empty es_ES .po files. Spanish translations are already 
-      provided in es files.
+      provided in es files. Thanks to Adolfo Jayme Barrientos (fitoschido)
+  * common/rpackagelister.cc:
+    - add support for complete removal (purge) in the markings file
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 12 Jul 2012 21:22:15 +0200
 
